--- a/manifest.json
+++ b/manifest.json
@@ -2,36 +2,35 @@
   "name": "Шар Судьбы",
   "short_name": "Шар Судьбы",
   "description": "Мистический шар с ИИ для принятия решений",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "form_factor": "wide",
- "screenshots": [
+  "screenshots": [
     {
-      "src": "/screenshot-1-wide.png",
+      "src": "./screenshot-1-wide.png",
       "sizes": "800x600",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/screenshot-2-narrow.png",
+      "src": "./screenshot-2-narrow.png",
       "sizes": "480x800",
       "type": "image/png",
       "form_factor": "narrow"
     }
-]
+  ]
 }
-
